# cparser

./: .clang-format  .cmake-format.json  .editorconfig  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  compiler.cpp  compiler.h  compiler.hpp  config.hpp.cin  lex.yy.c  main.cpp  main.nim  meson.build  meson_options.txt  phase2.l  phase2.yy.c  phase3.l  phase3.yy.c  phase4.html  phase4.tab.c  phase4.tab.h  phase4.xml  phase4.y  phase4peg.peg  preprocessor.l  preprocessor.y  test2.c  test3.c  test4.c  tokens.h
cmake/: config.hpp.cin
cparser/: CMakeLists.txt  meson.build
cparser/include/cparser/: diagnostic.hpp  diagnostic_bag.hpp  lexer.hpp  parser.hpp  peek_buffer.hpp  source_span.hpp  source_text.hpp  syntax_facts.hpp  syntax_kind.hpp  syntax_node.hpp  text_line.hpp  token.hpp  token_kind.hpp  trivia.hpp
cparser/include/cparser/ast/: array_index_expression.hpp  assignment_expression.hpp  binary_expression.hpp  call_expression.hpp  comma_expression.hpp  conditional_expression.hpp  decrement_expression.hpp  expression.hpp  expression_statement.hpp  increment_expression.hpp  literal_expression.hpp  member_access_expression.hpp  name_expression.hpp  parenthesized_expression.hpp  separated_syntax_list.hpp  statement.hpp  unary_expression.hpp
cparser/source/: diagnostic.cpp  diagnostic_bag.cpp  lexer.cpp  meson.build  parser.cpp  peek_buffer.cpp  source_text.cpp  syntax_facts.cpp  syntax_node.cpp  token.cpp  trivia.cpp
cparser/source/ast/: array_index_expression.cpp  assignment_expression.cpp  binary_expression.cpp  call_expression.cpp  comma_expression.cpp  conditional_expression.cpp  decrement_expression.cpp  expression_statement.cpp  increment_expression.cpp  literal_expression.cpp  member_access_expression.cpp  meson.build  name_expression.cpp  parenthesized_expression.cpp  separated_syntax_list.cpp  unary_expression.cpp
driver/: CMakeLists.txt  meson.build
driver/source/: main.cpp  meson.build
phase1/: CMakeLists.txt
phase1/include/cparser/: phase1.hpp
phase1/source/: phase1.cpp
rust/: Cargo.toml
rust/src/: main.rs
subprojects/: .gitignore  rang.wrap
